# bn-v850-arch

./: CMakeLists.txt  NOTICE.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: architecture.cpp  architecture.h  conditions.h  flags.h  info.cpp  instructions.cpp  instructions.h  lift.cpp  opcodes.cpp  opcodes.h  registers.h  sizes.h  text.cpp  util.cpp  util.h
